5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1674_1105.log
== TEST (2019-04-25 11:33:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("qual o seu brasao: ")

print("Entrada:" a)

if (a == "lobo"):
	print("Casa: Stark")
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 6
    print("Entrada:" a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:34:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("qual o seu brasao: ")

print("Entrada:" , a ,)

if (a == "lobo"):
	print("Casa: Stark")
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:34:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("qual o seu brasao: ")

print("Entrada:" , a ,)

if (a == "lobo"):
	print("Casa: Stark")
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:35:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("qual o seu brasao: ")

print("Entrada:" , a ,)

if (a == "lobo"):
	print("Casa: Stark")
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:36:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

a = input("qual o seu brasao: ")

print("Entrada:" , a ,)

if (a == "lobo"):
	print("Casa: Stark")
elif (a == "leao"):
	print("Casa: Lannister")
elif (a == "veado"):
	print("Casa: Baratheon")
elif (a=="dragao"):
	print("Casa: Targaryen")
elif (a=="rosa"):
	print("Casa: Tyrell")
elif (a == "sol"):
	print("Casa: Martell")
elif (a == "lula"):
	print("Casa: Greyjoy")
elif (a == "esfolado"):
	print("Casa: Bolton")
elif (a == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.194065
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
